Add PowerShell script for cleaning and building projects without file locking issues
- Introduced a new script `clean-build.ps1` to manage file handles during the clean and build process.
- The script stops any running `dotnet` processes to prevent file locking.
- Implements a sequence of `dotnet clean` followed by `dotnet build` with appropriate pauses.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,16 @@
   "github.copilot.chat.commitMessageGeneration.instructions": [
     { "file": ".github/awesome-copilot/instructions/conventional-commit-message.instructions.md" }
   ],
-  "azureFunctions.projectSubpath": "src\\HL7ResultsGateway.API"
+  "azureFunctions.projectSubpath": "src\\HL7ResultsGateway.API",
+  "files.exclude": {
+    "**/bin": true,
+    "**/obj": true
+  },
+  "files.watcherExclude": {
+    "**/bin/**": true,
+    "**/obj/**": true,
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/node_modules/**": true
+  }
 }
