fix(client): update appsettings.json with correct Azure AD configuration
- Updated Authority and ClientId for AzureAdB2C.
- Added API_Prefix to appsettings.json.

--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,4 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 /src/Client/wwwroot/appsettings.Development.json
+/src/Client/wwwroot/appsettings.json
