--- a/src/Client/wwwroot/appsettings.json
+++ b/src/Client/wwwroot/appsettings.json
@@ -1,7 +1,8 @@
 {
   "AzureAdB2C": {
-    "Authority": "https://aadB2CInstance.b2clogin.com/qualified.domain.name/b2c_1_susi",
-    "ClientId": "33333333-3333-3333-33333333333333333",
+    "Authority": "https://planetministriesb2c.b2clogin.com/planetministriesb2c.onmicrosoft.com/B2C_1_susi",
+    "ClientId": "1550c921-9ba5-4061-9d9e-64de07cc8f42",
     "ValidateAuthority": false
-  }
+  },
+  "API_Prefix": "http://localhost:7071"
 }
