Update .gitignore and remove appsettings.json
Added `/src/Client/wwwroot/appsettings.json` to .gitignore to prevent it from being tracked. Removed all content from `appsettings.json`, including Azure AD B2C settings and API prefix.

--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,4 @@ $RECYCLE.BIN/
 *.swp
 /src/Client/wwwroot/appsettings.Development.json
 /src/Client/wwwroot/appsettings.json
+/src/Client/wwwroot/appsettings.json
