--- a/src/Client/HL7ResultsGateway.Client.csproj
+++ b/src/Client/HL7ResultsGateway.Client.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HL7ResultsGateway.Domain\HL7ResultsGateway.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
