--- a/src/HL7ResultsGateway.Infrastructure/HL7ResultsGateway.Infrastructure.csproj
+++ b/src/HL7ResultsGateway.Infrastructure/HL7ResultsGateway.Infrastructure.csproj
@@ -1,9 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HL7ResultsGateway.Domain\HL7ResultsGateway.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
