feat(API): Implement JSON to HL7 conversion Azure Function
- Added ConvertJsonToHL7 function to handle JSON input and convert it to HL7 v2 messages.
- Integrated logging and error handling for better traceability.
- Registered necessary services in Program.cs for conversion handling.
- Updated related command and handler classes for processing.
- Enhanced tests for the new functionality.

--- a/src/HL7ResultsGateway.API/HL7ResultsGateway.API.csproj
+++ b/src/HL7ResultsGateway.API/HL7ResultsGateway.API.csproj
@@ -19,5 +19,6 @@
   <ItemGroup>
     <ProjectReference Include="..\HL7ResultsGateway.Application\HL7ResultsGateway.Application.csproj" />
     <ProjectReference Include="..\HL7ResultsGateway.Domain\HL7ResultsGateway.Domain.csproj" />
+    <ProjectReference Include="..\HL7ResultsGateway.Infrastructure\HL7ResultsGateway.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
