fix(http-client): improve BaseUrl handling for Azure Static Web Apps
- Updated HttpClient configuration to handle different BaseUrl scenarios.
- Utilized IWebAssemblyHostEnvironment to set BaseAddress based on configuration.
- Removed hardcoded BaseUrl in appsettings.json for flexibility.

--- a/src/Client/wwwroot/appsettings.json
+++ b/src/Client/wwwroot/appsettings.json
@@ -5,7 +5,7 @@
     "ValidateAuthority": false
   },
   "Api": {
-    "BaseUrl": "https://brave-flower-0c709e503.1.azurestaticapps.net",
+    "BaseUrl": "",
     "TimeoutSeconds": 30,
     "RetryAttempts": 3
   },
